[gd_scene load_steps=15 format=3 uid="uid://cmvmjk0jj7dam"]

[ext_resource type="Script" path="res://scrpt/GameBoard.gd" id="1_kkv4d"]
[ext_resource type="TileSet" uid="uid://ddn21fp2rgt22" path="res://scenes/attackTest.tres" id="2_n75uj"]
[ext_resource type="TileSet" uid="uid://kso1p0sb644e" path="res://TileSets/aura_overlay.tres" id="2_qub8j"]
[ext_resource type="Script" path="res://scenes/AuraOverlay.gd" id="3_2bv7w"]
[ext_resource type="Script" path="res://scenes/UnitOverlay.gd" id="5_b7qkm"]
[ext_resource type="Texture2D" uid="uid://b3uo7oofwridu" path="res://sprites/hexPathsTest.png" id="5_qejyn"]
[ext_resource type="PackedScene" uid="uid://dar8sp5uxx2aw" path="res://scrpt/unit_path.tscn" id="6_sxhsu"]
[ext_resource type="PackedScene" uid="uid://de42f2dvbgkri" path="res://scenes/cursor.tscn" id="7_bctkf"]
[ext_resource type="Script" path="res://scenes/AiManager.gd" id="7_rin0x"]
[ext_resource type="PackedScene" uid="uid://dxoxyyj8wpdgu" path="res://scenes/combat_manager.tscn" id="8_06m4j"]
[ext_resource type="Script" path="res://scenes/TurnSort.gd" id="9_gu2p2"]
[ext_resource type="Script" path="res://scenes/BoardState.gd" id="9_uqyc0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wrhp6"]
texture = ExtResource("5_qejyn")
texture_region_size = Vector2i(48, 17)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/bottom_right_side = 0
1:0/0/terrains_peering_bit/bottom_left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/bottom_right_side = 0
4:0/0/terrains_peering_bit/bottom_left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/bottom_left_side = 0
0:1/0/terrains_peering_bit/top_right_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_right_side = 0
2:1/0/terrains_peering_bit/top_left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_right_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/top_left_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/bottom_right_side = 0
0:2/0/terrains_peering_bit/top_left_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/top_left_side = 0
1:2/0/terrains_peering_bit/top_right_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/bottom_left_side = 0
2:2/0/terrains_peering_bit/top_right_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/bottom_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/top_right_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/bottom_left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/bottom_right_side = 0
3:3/0/terrains_peering_bit/top_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/top_left_side = 0
4:3/0/terrains_peering_bit/top_right_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/bottom_left_side = 0
5:3/0/terrains_peering_bit/top_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/terrains_peering_bit/top_side = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/bottom_right_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/terrains_peering_bit/top_left_side = 0
2:4/0/terrains_peering_bit/top_side = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/terrains_peering_bit/bottom_right_side = 0
0:5/0/terrains_peering_bit/bottom_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/bottom_left_side = 0
1:5/0/terrains_peering_bit/top_right_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/top_left_side = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/bottom_right_side = 0
0:6/0/terrains_peering_bit/top_right_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/bottom_right_side = 0
1:6/0/terrains_peering_bit/top_left_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/top_side = 0
2:6/0/terrains_peering_bit/top_right_side = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/terrains_peering_bit/bottom_side = 0
0:7/0/terrains_peering_bit/bottom_left_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/bottom_left_side = 0
1:7/0/terrains_peering_bit/top_right_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/bottom_left_side = 0
2:7/0/terrains_peering_bit/top_left_side = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
0:8/0/terrains_peering_bit/bottom_right_side = 0
0:8/0/terrains_peering_bit/top_left_side = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/terrains_peering_bit/bottom_right_side = 0
1:8/0/terrains_peering_bit/top_left_side = 0
1:9/0 = 0
1:9/0/terrain_set = 0
1:9/0/terrain = 0
1:9/0/terrains_peering_bit/bottom_left_side = 0
1:9/0/terrains_peering_bit/top_right_side = 0
2:9/0 = 0
2:9/0/terrain_set = 0
2:9/0/terrain = 0
2:9/0/terrains_peering_bit/bottom_left_side = 0
2:9/0/terrains_peering_bit/top_right_side = 0

[sub_resource type="TileSet" id="TileSet_pq6nq"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(168, 54)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_wrhp6")

[node name="Gameboard" type="Node2D"]
script = ExtResource("1_kkv4d")

[node name="AuraOverlay" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.905882)
visibility_layer = 2
y_sort_enabled = true
position = Vector2(1, 0)
tile_set = ExtResource("2_qub8j")
format = 2
layer_0/y_sort_enabled = true
layer_0/y_sort_origin = 4
script = ExtResource("3_2bv7w")

[node name="UnitOverlay" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.905882)
visibility_layer = 2
y_sort_enabled = true
tile_set = ExtResource("2_n75uj")
format = 2
layer_0/y_sort_enabled = true
layer_0/y_sort_origin = 4
script = ExtResource("5_b7qkm")

[node name="UnitPath" parent="." instance=ExtResource("6_sxhsu")]
visibility_layer = 2
tile_set = SubResource("TileSet_pq6nq")

[node name="Cursor" parent="." instance=ExtResource("7_bctkf")]
z_index = 1
position = Vector2(288, 156)

[node name="AiManager" type="Node" parent="."]
script = ExtResource("7_rin0x")

[node name="CombatManager" parent="." instance=ExtResource("8_06m4j")]

[node name="TurnSort" type="Node" parent="."]
script = ExtResource("9_gu2p2")

[node name="BoardState" type="Node" parent="."]
script = ExtResource("9_uqyc0")

[connection signal="area_entered" from="Cursor/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Cursor/Area2D" to="." method="_on_area_2d_area_exited"]

[editable path="Cursor"]
